--- a/PC/html/new/menu2_1.html
+++ b/PC/html/new/menu2_1.html
@@ -577,6 +577,7 @@ if (isEmpty(vid)) {//로그인이 안되있으면
         <div id="container" >   
             <!-- 컨텐츠 -->        
         <div class="content orderandpay" id="content">
+            <!-- 201228 작업부분 -->
             <!-- sub top -->
             <div class="page_location">
                 <h2 class="title">
@@ -646,6 +647,7 @@ jQuery(function($){
             <!-- //lnb -->
             <!-- sub contents -->
             <div class="sub_contents">
+                <!-- 201228 S : 작업부분 -->
                 <!-- h3 class="page_title mgt0"><img src="http://image.kyobobook.co.kr/newimages/giftshop_new/common/images/renewal/common/tit_notice.gif" alt="공지사항" /></h3 -->
                 <h3 class="page_title">
                     공지사항
@@ -663,13 +665,13 @@ jQuery(function($){
                     -->
                 <table class="bbs_list01 mgt30 tbl_slide" summary="핫트랙스 공지사항의 번호, 제목, 등록일, 조회 항목이 있습니다">
                 <caption>핫트랙스 공지사항</caption>
-                <colgroup>
+                <colgroup><!-- 201228 작업부분 -->
                 <!-- <col width="80"/> -->
                 <col width="*"/>
                 <col width="180"/>
                 </colgroup>
                 <thead>
-                <tr>
+                <tr><!-- 201228 작업부분 -->
                     <!-- <th scope="col" class="fir">
                         번호
                     </th> -->
@@ -683,7 +685,7 @@ jQuery(function($){
                 </thead>
                 <tbody>
                 <!-- 고정 일때 class="list_fixed" -->
-                <tr class="list_fixed">
+                <tr class="list_fixed"><!-- 201228 작업부분 -->
                     <!-- <td>
                         121
                     </td> -->
@@ -699,6 +701,7 @@ jQuery(function($){
                     </td>
                 </tr>
                 <tr class="conts" id="list-content22304">
+                    <!-- 201228 작업부분 -->
                     <td colspan="2">
                         <div class="txt">
                             <p>
@@ -726,7 +729,7 @@ jQuery(function($){
                         </div>
                     </td>
                 </tr>
-                <tr>
+                <tr><!-- 201228 작업부분 -->
                     <!-- <td>
                         120
                     </td> -->
@@ -742,6 +745,7 @@ jQuery(function($){
                     </td>
                 </tr>
                 <tr class="conts" id="list-content22145">
+                    <!-- 201228 작업부분 -->
                     <td colspan="2">
                         <div class="txt">
                             <p style="line-height: 1.2; font-family: Arial; font-size: 10pt;">
@@ -800,7 +804,7 @@ jQuery(function($){
                         </div>
                     </td>
                 </tr>
-                <tr>
+                <tr><!-- 201228 작업부분 -->
                     <!-- <td>
                         119
                     </td> -->
@@ -814,6 +818,7 @@ jQuery(function($){
                     </td>
                 </tr>
                 <tr class="conts" id="list-content21440">
+                    <!-- 201228 작업부분 -->
                     <td colspan="2">
                         <div class="txt">
                             <p>
@@ -855,7 +860,7 @@ jQuery(function($){
                         </div>
                     </td>
                 </tr>
-                <tr>
+                <tr><!-- 201228 작업부분 -->
                     <!-- <td>
                         118
                     </td> -->
@@ -869,6 +874,7 @@ jQuery(function($){
                     </td>
                 </tr>
                 <tr class="conts" id="list-content21024">
+                    <!-- 201228 작업부분 -->
                     <td colspan="2">
                         <div class="txt">
                             <p>
@@ -912,7 +918,7 @@ jQuery(function($){
                         </div>
                     </td>
                 </tr>
-                <tr>
+                <tr><!-- 201228 작업부분 -->
                     <!-- <td>
                         117
                     </td> -->
@@ -926,6 +932,7 @@ jQuery(function($){
                     </td>
                 </tr>
                 <tr class="conts" id="list-content20945">
+                    <!-- 201228 작업부분 -->
                     <td colspan="2">
                         <div class="txt">
                             <p>
@@ -962,7 +969,7 @@ jQuery(function($){
                         </div>
                     </td>
                 </tr>
-                <tr>
+                <tr><!-- 201228 작업부분 -->
                     <!-- <td>
                         116
                     </td> -->
@@ -976,6 +983,7 @@ jQuery(function($){
                     </td>
                 </tr>
                 <tr class="conts" id="list-content20824">
+                    <!-- 201228 작업부분 -->
                     <td colspan="2">
                         <div class="txt">
                             <p>
@@ -1013,7 +1021,7 @@ jQuery(function($){
                         </div>
                     </td>
                 </tr>
-                <tr>
+                <tr><!-- 201228 작업부분 -->
                     <!-- <td>
                         115
                     </td> -->
@@ -1027,6 +1035,7 @@ jQuery(function($){
                     </td>
                 </tr>
                 <tr class="conts" id="list-content20447">
+                    <!-- 201228 작업부분 -->
                     <td colspan="2">
                         <div class="txt">
                             <p>
@@ -1060,7 +1069,7 @@ jQuery(function($){
                             </div>
                         </td>
                     </tr>
-                    <tr>
+                    <tr><!-- 201228 작업부분 -->
                         <!-- <td>
                             114
                         </td> -->
@@ -1074,6 +1083,7 @@ jQuery(function($){
                         </td>
                     </tr>
                     <tr class="conts" id="list-content20005">
+                        <!-- 201228 작업부분 -->
                         <td colspan="2">
                             <div class="txt">
                                 <p style="font-size: 11px; border: 0px;">
@@ -1315,7 +1325,7 @@ jQuery(function($){
                             </div>
                         </td>
                     </tr>
-                    <tr>
+                    <tr><!-- 201228 작업부분 -->
                         <!-- <td>
                             113
                         </td> -->
@@ -1329,6 +1339,7 @@ jQuery(function($){
                         </td>
                     </tr>
                     <tr class="conts" id="list-content20505">
+                        <!-- 201228 작업부분 -->
                         <td colspan="2">
                             <div class="txt">
                                 <p>
@@ -1385,7 +1396,7 @@ jQuery(function($){
                             </div>
                         </td>
                     </tr>
-                    <tr>
+                    <tr><!-- 201228 작업부분 -->
                         <!-- <td>
                             112
                         </td> -->
@@ -1399,6 +1410,7 @@ jQuery(function($){
                         </td>
                     </tr>
                     <tr class="conts" id="list-content19847">
+                        <!-- 201228 작업부분 -->
                         <td colspan="2">
                             <div class="txt">
                                 <p>
@@ -1512,7 +1524,7 @@ jQuery(function($){
                             </div>
                         </td>
                     </tr>
-                    <tr>
+                    <tr><!-- 201228 작업부분 -->
                         <!-- <td>
                             111
                         </td> -->
@@ -1526,6 +1538,7 @@ jQuery(function($){
                         </td>
                     </tr>
                     <tr class="conts" id="list-content19106">
+                        <!-- 201228 작업부분 -->
                         <td colspan="2">
                             <div class="txt">
                                 <p>
@@ -1567,7 +1580,7 @@ jQuery(function($){
                             </div>
                         </td>
                     </tr>
-                    <tr>
+                    <tr><!-- 201228 작업부분 -->
                         <!-- <td>
                             110
                         </td> -->
@@ -1581,6 +1594,7 @@ jQuery(function($){
                         </td>
                     </tr>
                     <tr class="conts" id="list-content18604">
+                        <!-- 201228 작업부분 -->
                         <td colspan="2">
                             <div class="txt">
                                 <p>
@@ -1637,7 +1651,7 @@ jQuery(function($){
                             </div>
                         </td>
                     </tr>
-                    <tr>
+                    <tr><!-- 201228 작업부분 -->
                         <!-- <td>
                             109
                         </td> -->
@@ -1651,6 +1665,7 @@ jQuery(function($){
                         </td>
                     </tr>
                     <tr class="conts" id="list-content15356">
+                        <!-- 201228 작업부분 -->
                         <td colspan="2">
                             <div class="txt">
                                 <p style="text-align: center; font-size: 13px;" jquery1523930370922="3222">
@@ -1792,7 +1807,7 @@ jQuery(function($){
                                     </div>
                                 </td>
                             </tr>
-                            <tr>
+                            <tr><!-- 201228 작업부분 -->
                                 <!-- <td>
                                     108
                                 </td> -->
@@ -1806,6 +1821,7 @@ jQuery(function($){
                                 </td>
                             </tr>
                             <tr class="conts" id="list-content14515">
+                                <!-- 201228 작업부분 -->
                                 <td colspan="2">
                                     <div class="txt">
                                         <p style="TEXT-ALIGN: center">
@@ -1883,7 +1899,7 @@ jQuery(function($){
                                             </div>
                                         </td>
                                     </tr>
-                                    <tr>
+                                    <tr><!-- 201228 작업부분 -->
                                         <!-- <td>
                                             107
                                         </td> -->
@@ -1897,6 +1913,7 @@ jQuery(function($){
                                         </td>
                                     </tr>
                                     <tr class="conts" id="list-content13479">
+                                        <!-- 201228 작업부분 -->
                                         <td colspan="2">
                                             <div class="txt">
                                                 <p style="FONT-SIZE: 13px" jquery1523930370922="3115">
@@ -2262,7 +2279,7 @@ jQuery(function($){
                                             </div>
                                         </td>
                                     </tr>
-                                    <tr>
+                                    <tr><!-- 201228 작업부분 -->
                                         <!-- <td>
                                             106
                                         </td> -->
@@ -2276,6 +2293,7 @@ jQuery(function($){
                                         </td>
                                     </tr>
                                     <tr class="conts" id="list-content12338">
+                                        <!-- 201228 작업부분 -->
                                         <td colspan="2">
                                             <div class="txt">
                                                 <p style="TEXT-ALIGN: center">
@@ -9136,7 +9154,7 @@ jQuery(function($){
                                             </div>
                                         </td>
                                     </tr>
-                                    <tr>
+                                    <tr><!-- 201228 작업부분 -->
                                         <!-- <td>
                                             105
                                         </td> -->
@@ -9150,6 +9168,7 @@ jQuery(function($){
                                         </td>
                                     </tr>
                                     <tr class="conts" id="list-content11223">
+                                        <!-- 201228 작업부분 -->
                                         <td colspan="2">
                                             <div class="txt">
                                                 <p>
@@ -9226,7 +9245,7 @@ jQuery(function($){
                                             </div>
                                         </td>
                                     </tr>
-                                    <tr>
+                                    <tr><!-- 201228 작업부분 -->
                                         <!-- <td>
                                             104
                                         </td> -->
@@ -9240,6 +9259,7 @@ jQuery(function($){
                                         </td>
                                     </tr>
                                     <tr class="conts" id="list-content10067">
+                                        <!-- 201228 작업부분 -->
                                         <td colspan="2">
                                             <div class="txt">
                                                 <p style="TEXT-ALIGN: center">
@@ -9271,7 +9291,7 @@ jQuery(function($){
                                             </div>
                                         </td>
                                     </tr>
-                                    <tr>
+                                    <tr><!-- 201228 작업부분 -->
                                         <!-- <td>
                                             103
                                         </td> -->
@@ -9285,6 +9305,7 @@ jQuery(function($){
                                         </td>
                                     </tr>
                                     <tr class="conts" id="list-content9854">
+                                        <!-- 201228 작업부분 -->
                                         <td colspan="2">
                                             <div class="txt">
                                                 <p>
@@ -9377,7 +9398,7 @@ jQuery(function($){
                                             </div>
                                         </td>
                                     </tr>
-                                    <tr>
+                                    <tr><!-- 201228 작업부분 -->
                                         <!-- <td>
                                             102
                                         </td> -->
@@ -9391,6 +9412,7 @@ jQuery(function($){
                                         </td>
                                     </tr>
                                     <tr class="conts" id="list-content9852">
+                                        <!-- 201228 작업부분 -->
                                         <td colspan="2">
                                             <div class="txt">
                                                 <p>
@@ -9492,21 +9514,37 @@ jQuery(function($){
                                     </tr>
                                     </tbody>
                                     </table>
-                                    <!-- 20.12.28 : 작업부분 -->
                                     <!-- paging -->
-                                    <div class="pagination_v2 mgt80">
-                                        <a title="테스트" href="javascript:" class="arr prev first"></a>
-                                        <a href="javascript://" class="active">1</a>
-                                        <a title="2페이지로 이동" href="javascript:srchPageMove('2')">2</a>
-                                        <a title="3페이지로 이동" href="javascript:srchPageMove('3')">3</a>
-                                        <a title="4페이지로 이동" href="javascript:srchPageMove('4')">4</a>
-                                        <a title="5페이지로 이동" href="javascript:srchPageMove('5')">5</a>
-                                        <a href="javascript:srchPageMove('6')" class="arr next"></a>
-                                    </div>                                    
+                                    <div class="paging mgt40">
+                                        <a title="맨 처음 페이지로 이동" href="/ht/help/listNotice?page=1" class="first">처음</a>
+                                        <ul>
+                                            <li class="active">
+                                                <a href="javascript://">1</a>
+                                            </li>
+                                            <li>
+                                                <a title="2페이지로 이동" href="/ht/help/listNotice?page=2">2</a>
+                                            </li>
+                                            <li>
+                                                <a title="3페이지로 이동" href="/ht/help/listNotice?page=3">3</a>
+                                            </li>
+                                            <li>
+                                                <a title="4페이지로 이동" href="/ht/help/listNotice?page=4">4</a>
+                                            </li>
+                                            <li>
+                                                <a title="5페이지로 이동" href="/ht/help/listNotice?page=5">5</a>
+                                            </li>
+                                            <li>
+                                                <a title="6페이지로 이동" href="/ht/help/listNotice?page=6">6</a>
+                                            </li>
+                                            <li>
+                                                <a title="7페이지로 이동" href="/ht/help/listNotice?page=7">7</a>
+                                            </li>
+                                        </ul>
+                                    </div>                                 
                                     <!-- //paging -->
-                                    <!--// 20.12.28 : 작업부분 -->
                                 </div>
                                 <!-- //sub contents -->
+                                <!-- // 201228 E : 작업부분 -->
                             </div>
                             <!-- //컨텐츠 -->
                         </div>
