--- a/PC/html/new/menu2_3.html
+++ b/PC/html/new/menu2_3.html
@@ -832,7 +832,7 @@ if (isEmpty(vid)) {//로그인이 안되있으면
         <div id="container" >   
             <!-- 컨텐츠 -->        
         <div class="content orderandpay" id="content">
-            
+            <!-- 201228 작업부분 -->
             <!-- sub top -->
             <div class="page_location">
                 <h2 class="title">
