--- a/PC/html/new/menu5_1.html
+++ b/PC/html/new/menu5_1.html
@@ -832,7 +832,7 @@ if (isEmpty(vid)) {//로그인이 안되있으면
         <div id="container" >   
             <!-- 컨텐츠 -->        
             <div class="content orderandpay" id="content">
-            
+                <!-- 201228 작업부분 -->
                 <!-- sub top -->
                 <div class="page_location">
                     <h2 class="title"><a href="javascript:;">고객센터</a></h2>
@@ -924,6 +924,7 @@ jQuery(function($){
             <li>- 활용기간: 접수일로부터 한 달</li>
             <li>- 기재하여 주신 개인 정보는 제휴협의 외 다른 목적으로 사용되지 않습니다</li>
         </ul>
+        <!-- 201228 작업부분 -->
         <div class="choice_wrap type_squre have_inner_txt inner_float">
             <div class="choice_wrap_inner">
                 <span>
@@ -933,7 +934,7 @@ jQuery(function($){
             </div>                                             
         </div>
     </div>
-
+    <!-- 201228 : S 작업부분 -->
     <h4 class="important_info mgt30">
         <span>필수 입력 정보 </span>
         <span class="detail_txt">상품 입점을 위한 필수 정보입니다.  모두 입력 후 추가 선택 정보를 입력해 주세요.</span>
@@ -1147,6 +1148,7 @@ jQuery(function($){
     <div class="btn_wrap distance">
         <a href="javascript://" class="btn_basic" onclick="submitFrm()">상품 입점 문의</a>
     </div>
+    <!--// 201228 : E 작업부분 -->
     </form>
 </div>
 <!-- //sub contents -->
