--- a/PC/html/new/menu5_2.html
+++ b/PC/html/new/menu5_2.html
@@ -715,7 +715,7 @@ if (isEmpty(vid)) {//로그인이 안되있으면
         <div id="container" >   
             <!-- 컨텐츠 -->        
             <div class="content orderandpay" id="content">
-            
+                <!-- 201228 작업부분 -->
                 <!-- sub top -->
                 <div class="page_location">
                     <h2 class="title"><a href="javascript:;">고객센터</a></h2>
@@ -811,6 +811,7 @@ jQuery(function($){
                 <li>- 활용기간: 접수일로부터 한 달</li>
                 <li>- 기재하여 주신 개인 정보는 제휴협의 외 다른 목적으로 사용되지 않습니다</li>
             </ul>
+            <!-- 201228 작업부분 -->
             <div class="choice_wrap type_squre have_inner_txt inner_float">
                 <div class="choice_wrap_inner">
                     <span>
@@ -820,6 +821,7 @@ jQuery(function($){
                 </div>                                             
             </div>
         </div>
+        <!-- 201228 : S 작업부분 -->
         <table class="table_wrap cs mgt30" summary="대량구매상담 양식의 회사명,회사주소,회사홈페이지,담당자명,부서명,전화,휴대폰,이메일,희망구매상품,희망구매수량,비고 항목이 있습니다.">
             <caption>대량구매상담 양식</caption>
             <colgroup>
@@ -950,6 +952,7 @@ jQuery(function($){
         <div class="btn_wrap distance">
             <a href="javascript://" onclick="sendBulkCounselRequest()" class="btn_basic">상담 접수</a>
         </div>
+        <!--// 201228 : E 작업부분 -->
     </form>
 </div>
 <!-- //sub contents -->
