--- a/PC/html/new/menu6_1.html
+++ b/PC/html/new/menu6_1.html
@@ -714,7 +714,7 @@ if (isEmpty(vid)) {//로그인이 안되있으면
         <div id="container" >   
             <!-- 컨텐츠 -->        
             <div class="content orderandpay" id="content">
-            
+                <!-- 201228 작업부분 -->
                 <!-- sub top -->
                 <div class="page_location">
                     <h2 class="title"><a href="javascript:;">고객센터</a></h2>
@@ -806,7 +806,7 @@ jQuery(function($){
             <col width="*" />
         </colgroup>
         <thead>
-            <tr>
+            <tr><!-- 201228 작업부분 -->
                 <th scope="col" class="defalut">회원 등급</th>
                 <th scope="col" class="friends">프렌즈</th>
                 <th scope="col" class="silver">실버</th>
