--- a/PC/html/new/menu6_4.html
+++ b/PC/html/new/menu6_4.html
@@ -669,7 +669,7 @@ if (isEmpty(vid)) {//로그인이 안되있으면
         <div id="container" >   
             <!-- 컨텐츠 -->        
             <div class="content orderandpay" id="content">
-            
+                <!-- 201228 작업부분 -->
                 <!-- sub top -->
                 <div class="page_location">
                     <h2 class="title"><a href="javascript:;">고객센터</a></h2>
@@ -748,7 +748,7 @@ jQuery(function($){
         <li>고급필기구 구매 시, 선물 포장을 원하실 경우 주문서에 메모를 남겨주시면</li>
         <li>무료로 선물 포장 서비스를 해드립니다. (카드리지, 병잉크 등 악세서리는 제외)</li>
     </ul>
-
+    <!-- 201228 작업부분 -->
     <div class="box_gray03 mgt40 pd20">
         <p class="txt_tip">고급필기구 브랜드별 선물 포장은 아래 이미지를 참조하세요.<br /><span class="stxt">(포장 이미지는 실제와 다소 차이가 있을 수 있습니다.)</span></p>
     </div>
