--- a/PC/html/new/menu7_3.html
+++ b/PC/html/new/menu7_3.html
@@ -843,12 +843,12 @@ jQuery(function($){
     <!-- 201228 : S 작업부분 -->
     <table class="bbs_list01 tbl_slide">
         <caption></caption>
-        <colgroup>
+        <colgroup><!-- 201228 작업부분 -->
             <col width="160" />
             <col width="*">
         </colgroup>
         <thead>
-            <tr>
+            <tr><!-- 201228 작업부분 -->
                 <!--<th scope="col" class="fir">번호</th>-->
                 <th scope="col">구분</th>
                 <th scope="col">제목</th>
@@ -858,15 +858,18 @@ jQuery(function($){
         <tbody>
             
                 <tr>
+                    <!-- 201228 작업부분 -->
                     <!-- <td>1</td> -->
                     <td>기타</td>
                     <td class="t_left">
                         <a href="#faq0" class="click">핫트랙스 입사지원을 하고 싶습니다.</a>
                         <input type="hidden" value="95"/>
                     </td>
+                    <!-- 201228 작업부분 -->
                     <!-- <td id="faqHit95">5120</td> -->
                 </tr>
                 <tr class="conts" id="faq0">
+                    <!-- 201228 작업부분 -->
                     <td colspan="2"><div class="txt"><P><FONT color=#5d5d5d><SPAN style="FONT-FAMILY: Dotum,돋움">입사지원은 회사 홈페이지의&nbsp;“인재채용”부분을 클릭하시어 지원양식을 작성해 주십시오. </SPAN><BR><SPAN style="FONT-FAMILY: Dotum,돋움">단, 채용기간에만 입사지원을 받고 있사오니 이 점 참고해 주십시오.</SPAN></FONT></P></div></td>
                 </tr>
              
