--- a/PC/html/new/menu3_5.html
+++ b/PC/html/new/menu3_5.html
@@ -669,7 +669,7 @@ if (isEmpty(vid)) {//로그인이 안되있으면
         <div id="container" >   
             <!-- 컨텐츠 -->        
             <div class="content orderandpay" id="content">
-            
+        <!-- 201228 작업부분 -->    
         <!-- sub top -->
         <div class="page_location">
             <h2 class="title"><a href="javascript:;">고객센터</a></h2>
@@ -743,7 +743,7 @@ jQuery(function($){
             <!-- //lnb -->
 <!-- sub contents -->
 <div class="sub_contents">
-    <div class="cardinfo_wrap">
+    <div class="cardinfo_wrap"><!-- 201228 작업부분 -->
         <h3 class="page_title">제휴/할인카드</h3>
         <ul class="list_type02">
             <li>핫트랙스의 또 다른 혜택 추가적립 &amp; 할인과 다양한 무이자 할부 혜택!</li>
