--- a/PC/html/new/menu6_2.html
+++ b/PC/html/new/menu6_2.html
@@ -700,7 +700,7 @@ if (isEmpty(vid)) {//로그인이 안되있으면
         <div id="container" >   
             <!-- 컨텐츠 -->        
             <div class="content orderandpay" id="content">
-            
+                <!-- 201228 작업부분 -->
                 <!-- sub top -->
                 <div class="page_location">
                     <h2 class="title"><a href="javascript:;">고객센터</a></h2>
@@ -782,6 +782,7 @@ jQuery(function($){
     </ul>
 
     <h4 class="tit01">통합포인트 적립방법</h4>
+    <!-- 201228 작업부분 -->
     <div class="img_change_box">
         <ul class="change_list">
             <li>
@@ -816,6 +817,7 @@ jQuery(function($){
             </li>
         </ul>
     </div>
+    <!-- 201228 작업부분 -->
     <ul class="list_type02 mgt15">
         <li>매장에서 결제하신 핫트랙스 영수증은 통합 포인트 추후 적립이 가능합니다. </li>
         <li>영수증 하단에 있는 바코드 번호와 승인금액을 입력하셔야 통합 포인트가 적립됩니다. </li>
@@ -828,6 +830,7 @@ jQuery(function($){
 
     <div class="save_point">
         <div class="inner">
+            <!-- 201228 : S 작업부분 -->
             <div class="f_left">
                 <h4 class="tit01">통합포인트 적립</h4>
                 <p class="stxt"> 구매 시 적립하지 못한 포인트가 있다면 핫트랙스 온라인몰에서 간편하게 적립하세요.</p>
@@ -869,6 +872,7 @@ jQuery(function($){
                 </form>
             </div>
             <div class="f_right"><img src="http://image.kyobobook.co.kr/newimages/giftshop_new/common/images/renewal/content/img_bill.gif" alt=""/></div>
+            <!--// 201228 : E 작업부분 -->
         </div>
     </div>
 
