--- a/PC/html/new/menu6_3.html
+++ b/PC/html/new/menu6_3.html
@@ -669,7 +669,7 @@ if (isEmpty(vid)) {//로그인이 안되있으면
         <div id="container" >   
             <!-- 컨텐츠 -->        
             <div class="content orderandpay" id="content">
-            
+                <!-- 201228 작업부분 -->
                 <!-- sub top -->
                 <div class="page_location">
                     <h2 class="title"><a href="javascript:;">고객센터</a></h2>
@@ -743,6 +743,7 @@ jQuery(function($){
             <!-- //lnb -->
 <!-- sub contents -->
 <div class="sub_contents">
+    <!-- 201228 작업부분 -->
     <h3 class="page_title mgt0">각인 서비스</h3>
     <ul class="list_type02">
         <li>고급필기구 단품가 2만원 이상 구매하시는 모든 분께는 각인을 무료로 제작해 드립니다.</li>
