--- a/PC/path_now.html
+++ b/PC/path_now.html
@@ -942,7 +942,7 @@ th.row-headers-background {
       <tr style='height:29px;'>
         <th id="2024277320R4" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">5</div></th>
         <td class="s14"></td>
-        <td class="s15" dir="ltr" rowspan="22">고객센터</td>
+        <td class="s15" dir="ltr" rowspan="25">고객센터</td>
         <td class="s16">고객센터</td>
         <td class="s16" dir="ltr"></td>
         <td class="s10"></td>
@@ -956,12 +956,48 @@ th.row-headers-background {
       <tr style='height:29px;'>
         <th id="2024277320R5" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">6</div></th>
         <td class="s14"></td>
-        <td class="s16" dir="ltr">SOS상담</td>
-        <td class="s16"></td>
+        <td class="s16" dir="ltr" rowspan="4">SOS상담</td>
+        <td class="s16">쇼핑몰 이용 상담</td>
         <td class="s10"></td>
         <td class="s16"></td>
         <td class="s17"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/menu1_1.html">./html/new/menu1_1.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/menu1_1_01.html">./html/new/menu1_1_01.html</a></td>
+        <td class="s19" dir="ltr">완료</td>
+        <td class="s16">주문내역 팝업,주문상품 조회 팝업</td>
+        <td class="s4"></td>
+      </tr>
+      <tr style='height:29px;'>
+        <th id="2024277320R5" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">6</div></th>
+        <td class="s14"></td>
+        <td class="s16" dir="ltr">주문내역 팝업</td>
+        <td class="s10"></td>
+        <td class="s16"></td>
+        <td class="s17"></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/popupSearchOrder.html">./html/new/popupSearchOrder.html</a></td>
+        <td class="s19" dir="ltr">완료</td>
+        <td class="s16"></td>
+        <td class="s4"></td>
+      </tr>
+      <tr style='height:29px;'>
+        <th id="2024277320R5" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">6</div></th>
+        <td class="s14"></td>
+        <td class="s16" dir="ltr">주문상품 조회 팝업</td>
+        <td class="s10"></td>
+        <td class="s16"></td>
+        <td class="s17"></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/popupSearchOrderProduct.html">./html/new/popupSearchOrderProduct.html</a></td>
+        <td class="s19" dir="ltr">완료</td>
+        <td class="s16"></td>
+        <td class="s4"></td>
+      </tr>
+      <tr style='height:29px;'>
+        <th id="2024277320R5" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">6</div></th>
+        <td class="s14"></td>
+        <td class="s16" dir="ltr">매장 이용 상담</td>
+        <td class="s10"></td>
+        <td class="s16"></td>
+        <td class="s17"></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/menu1_1_02.html">./html/new/menu1_1_02.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
         <td class="s4"></td>
