--- a/MOBILE/html/new/listNotice.html
+++ b/MOBILE/html/new/listNotice.html
@@ -43,10 +43,12 @@
   <!-- //#header -->
   
 <!-- #content -->
-<div id="content">
+<!-- 201228 : S 작업부분 id="content" class="orderandpay" 넣어주세요-->
+<div id="content" class="orderandpay"> 
         
 <!-- content -->
-<div class="customer mt17">
+<!-- 201228 : S 작업부분 -->
+<div class="customer">
     <div class="tab_box">
         <a href="/m/help/listNotice" class="active">공지사항</a>
         <a href="/m/help/listEventPrize">이벤트당첨자</a>
