--- a/MOBILE/html/new/listEventPrize.html
+++ b/MOBILE/html/new/listEventPrize.html
@@ -12,17 +12,22 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-itunes-app" content="app-id=1129743143">
 <meta name="google-play-app" content="app-id=kr.co.hottracks.m.and">
-<link rel="apple-touch-icon-precomposed" href="/images/content/ico_app.png" />
-<link rel="apple-touch-startup-image" href="/images/content/ico_app.png">
-<link href="/favicon.ico" rel="shortcut icon">
-<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Noto+Sans+KR:300,400,700|Titillium+Web:400,600&display=swap&subset=korean">
-<link rel="stylesheet" type="text/css" href="/pages/html/css/layout.css">
-<link rel="stylesheet" type="text/css" href="/pages/html/css/content.css">
-<link rel="stylesheet" type="text/css" href="/pages/html/css/common.css">
-<link rel="stylesheet" type="text/css" href="/pages/html/css/common_v2.css">
-<link rel="stylesheet" type="text/css" href="/pages/html/css/swiper-5.1.0.min.css">
-<script type="text/javascript" src="/js/jquery-1.9.1.min.js?20191101"></script> 
-<script type="text/javascript" src="/js/common.js?20191101"></script>
+<link rel="apple-touch-icon-precomposed" href="../../images/content/ico_app.png" />
+<link rel="apple-touch-startup-image" href="../../images/content/ico_app.png">
+<link href="../../favicon.ico" rel="shortcut icon">
+
+<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/earlyaccess/notosanskr.css">
+<link href="../../images/biz/common/favicon.ico" rel="shortcut icon">
+<link rel="stylesheet" type="text/css" href="../../css/layout.css">
+<link rel="stylesheet" type="text/css" href="../../css/content.css">
+<link rel="stylesheet" type="text/css" href="../../css/common.css">
+<link rel="stylesheet" type="text/css" href="../../css/swiper.min.css">
+<link rel="stylesheet" type="text/css" href="../../css/biz/common_v2.css">
+<!-- 201228 작업부분 -->
+<link rel="stylesheet" type="text/css" href="../../css/new/orderandpay.css">
+
+<script type="text/javascript" src="../../js/jquery-1.9.1.min.js"></script> 
+<script type="text/javascript" src="../../js/common.js"></script>
 </head>
 <body>
 
@@ -40,16 +45,19 @@
   <!-- //#header -->
   
 <!-- #content -->
-<div id="content">
+<!-- 201228 : S 작업부분 id="content" class="orderandpay" 넣어주세요-->
+<div id="content" class="orderandpay"> 
         
 <!-- content -->
-<div class="customer mt17">
+<!-- 201228 작업부분 -->
+<div class="customer">
     <div class="tab_box">
         <a href="/m/help/listNotice">공지사항</a>
         <a href="/m/help/listEventPrize" class="active">이벤트당첨자</a>
     </div>
     <div class="bbs_box">
-        <ul class="accordion mgt20">
+         <!-- 201228 작업부분 -->
+        <ul class="accordion mt40">
             
                 <li>
                     <a href="javascript://">
