--- a/PC/html/new/menu1_1_01.html
+++ b/PC/html/new/menu1_1_01.html
@@ -806,14 +806,6 @@ if (isEmpty(vid)) {//로그인이 안되있으면
         <div id="container" >   
             <!-- 컨텐츠 -->        
         <div class="content orderandpay" id="content">
-            <!-- 201228 작업부분 -->
-            <!-- sub top -->
-            <div class="page_location">
-                <h2 class="title">
-                    <a href="javascript:;">MY HOTTRACKS</a>
-                </h2>
-            </div>
-            <!-- //sub top -->
 
 
 
@@ -831,6 +823,14 @@ jQuery(function($){
 <!-- lnb -->
 <!-- 201228 S : 작업부분 -->
 <div class="lnb">
+    <!-- 201228 작업부분 -->
+    <!-- sub top -->
+    <div class="page_location">
+        <h2 class="title">
+            <a href="javascript:;">고객센터</a>
+        </h2>
+    </div>
+    <!-- //sub top -->
     <ul>
         <li><a href="/ht/help/sosCounselMain">SOS상담</a></li>
         <li><a>공지사항</a>
