--- a/MOBILE/html/new/listNotice.html
+++ b/MOBILE/html/new/listNotice.html
@@ -14,18 +14,27 @@
 <meta name="google-play-app" content="app-id=kr.co.hottracks.m.and">
 <link rel="apple-touch-icon-precomposed" href="../../images/content/ico_app.png" />
 <link rel="apple-touch-startup-image" href="../../images/content/ico_app.png">
-<link href="/favicon.ico" rel="shortcut icon">
+<link href="../../images/biz/common/favicon.ico" rel="shortcut icon">
+
 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/earlyaccess/notosanskr.css">
-<link rel="stylesheet" type="text/css" href="../../pages/html/css/layout.css">
-<link rel="stylesheet" type="text/css" href="../../pages/html/css/content.css">
-<link rel="stylesheet" type="text/css" href="../../pages/html/css/common.css">
-<link rel="stylesheet" type="text/css" href="../../pages/html/css/common_v2.css">
-<link rel="stylesheet" type="text/css" href="../../pages/html/css/swiper-5.1.0.min.css">
+
+<link rel="stylesheet" type="text/css" href="../../css/layout.css">
+<link rel="stylesheet" type="text/css" href="../../css/content.css">
+<link rel="stylesheet" type="text/css" href="../../css/common.css">
+<link rel="stylesheet" type="text/css" href="../../css/swiper.min.css">
+<link rel="stylesheet" type="text/css" href="../../css/biz/hottm_yj.css">
+<link rel="stylesheet" type="text/css" href="../../css/biz/common_v2.css">
+
 <!-- 201228 작업부분 -->
 <link rel="stylesheet" type="text/css" href="../../css/new/orderandpay.css">
 
-<script type="text/javascript" src="/js/jquery-1.9.1.min.js"></script> 
-<script type="text/javascript" src="/js/common.js"></script>
+
+
+<script type="text/javascript" src="../../js/jquery-1.9.1.min.js"></script>
+<script type="text/javascript" src="../../js/swiper.min.js"></script>
+<script type="text/javascript" src="../../js/common.js"></script>
+<script type="text/javascript" src="../../js/biz/common_v2.js"></script>
+<script type="text/javascript" src="../../js/biz/m_hott.js"></script>
 </head>
 <body>
 
@@ -47,14 +56,15 @@
 <div id="content" class="orderandpay"> 
         
 <!-- content -->
-<!-- 201228 : S 작업부분 -->
+<!-- 201228 작업부분 -->
 <div class="customer">
     <div class="tab_box">
         <a href="/m/help/listNotice" class="active">공지사항</a>
         <a href="/m/help/listEventPrize">이벤트당첨자</a>
     </div>
     <div class="bbs_box">
-        <ul class="accordion mgt20">
+        <!-- 201228 작업부분 -->
+        <ul class="accordion mt40">
             
                 <li>
                     <a href="javascript://">
