--- a/PC/html/new/menu4_1.html
+++ b/PC/html/new/menu4_1.html
@@ -733,12 +733,6 @@ if (isEmpty(vid)) {//로그인이 안되있으면
         <div id="container" >   
             <!-- 컨텐츠 -->        
             <div class="content orderandpay" id="content">
-        <!-- 201228 작업부분 -->    
-        <!-- sub top -->
-        <div class="page_location">
-            <h2 class="title"><a href="javascript:;">고객센터</a></h2>
-        </div>
-        <!-- //sub top -->
 
 
 
@@ -756,6 +750,12 @@ jQuery(function($){
             <!-- lnb -->
             <!-- 201228 S : 작업부분 -->
             <div class="lnb">
+                <!-- 201228 작업부분 -->    
+                <!-- sub top -->
+                <div class="page_location">
+                    <h2 class="title"><a href="javascript:;">고객센터</a></h2>
+                </div>
+                <!-- //sub top -->
                 <ul>
                     <li><a href="/ht/help/sosCounselMain">SOS상담</a></li>
                     <li><a>공지사항</a>
@@ -807,27 +807,27 @@ jQuery(function($){
             <!-- // 201228 E : 작업부분 -->
             <!-- //lnb -->
 
-<!-- sub contents -->
-<div class="sub_contents">
+            <!-- sub contents -->
+            <div class="sub_contents">
     
             <!-- <h3 class="page_title mgt0"><img src="http://image.kyobobook.co.kr/newimages/giftshop_new/common/images/renewal/common/tit_member_faq.gif" alt="회원 FAQ" /></h3> -->
             <h3 class="page_title mgt0">회원 FAQ</h3>
         
-    <!-- search -->
-    <div class="search_box02">
-        <form method="get" action="/ht/help/faqListC0401" name="faqSearchForm">
-            <fieldset>
-                <legend>FAQ Search</legend>
-                <label for="search_faq" class="stit"><img src="http://image.kyobobook.co.kr/newimages/giftshop_new/common/images/renewal/common/stit_faq_search.gif" alt="FAQ Search"/></label>
-                <span class="text_box">
-                    <input type="text" id="search_faq" name="title" value="" title="검색어 입력" />
-                    <a href="#" class="search_btn searchText"><span>검색</span></a>
-                    <span class="exm_txt">검색어를 입력하세요</span>
-                </span>
-            </fieldset>
-        </form>
-    </div>
-    <!-- search -->
+            <!-- search -->
+            <div class="search_box02">
+                <form method="get" action="/ht/help/faqListC0401" name="faqSearchForm">
+                    <fieldset>
+                        <legend>FAQ Search</legend>
+                        <label for="search_faq" class="stit">FAQ Search</label>
+                        <span class="text_box">
+                            <input type="text" id="search_faq" name="title" value="" title="검색어 입력" />
+                            <a href="#" class="search_btn searchText"><span>검색</span></a>
+                            <span class="exm_txt">검색어를 입력하세요</span>
+                        </span>
+                    </fieldset>
+                </form>
+            </div>
+            <!-- search -->
 
     <!-- tab --> 
     <!-- 201228 작업부분 -->
