--- a/PC/html/new/menu4_2.html
+++ b/PC/html/new/menu4_2.html
@@ -733,12 +733,6 @@ if (isEmpty(vid)) {//로그인이 안되있으면
         <div id="container" >   
             <!-- 컨텐츠 -->        
             <div class="content orderandpay" id="content">
-        <!-- 201228 작업부분 -->    
-        <!-- sub top -->
-        <div class="page_location">
-            <h2 class="title"><a href="javascript:;">고객센터</a></h2>
-        </div>
-        <!-- //sub top -->
 
 
 
@@ -756,6 +750,12 @@ jQuery(function($){
             <!-- lnb -->
             <!-- 201228 S : 작업부분 -->
             <div class="lnb">
+                <!-- 201228 작업부분 -->    
+                <!-- sub top -->
+                <div class="page_location">
+                    <h2 class="title"><a href="javascript:;">고객센터</a></h2>
+                </div>
+                <!-- //sub top -->
                 <ul>
                     <li><a href="/ht/help/sosCounselMain">SOS상담</a></li>
                     <li><a>공지사항</a>
@@ -818,7 +818,7 @@ jQuery(function($){
         <form method="get" action="/ht/help/faqListC0402" name="faqSearchForm">
             <fieldset>
                 <legend>FAQ Search</legend>
-                <label for="search_faq" class="stit"><img src="http://image.kyobobook.co.kr/newimages/giftshop_new/common/images/renewal/common/stit_faq_search.gif" alt="FAQ Search"/></label>
+                <label for="search_faq" class="stit">FAQ Search</label>
                 <span class="text_box">
                     <input type="text" id="search_faq" name="title" value="" title="검색어 입력" />
                     <a href="#" class="search_btn searchText"><span>검색</span></a>
