--- a/MOBILE/html/new/listFaq_new.html
+++ b/MOBILE/html/new/listFaq_new.html
@@ -30,11 +30,11 @@
     <!-- 201228 : S 작업부분 class="orderandpay" 넣어주세요-->
     <!-- content -->
     <div class="customer">
-        <div class="layer_title">
+        <div class="customer_layer_title">
             <h1>FAQ</h1>
         </div>
 
-        <div class="layer_contents">
+        <div class="customer_layer_contents">
             <p class="text">핫트랙스에서 고객 여러분께 자주묻는 질문의 답변을 드립니다.</p>
             <ul class="accordion mt20">
                 <li>
