--- a/MOBILE/html/new/popup_safety_info.html
+++ b/MOBILE/html/new/popup_safety_info.html
@@ -26,7 +26,8 @@
 </head>
 
 <body>
-<div id="wrap" class="content_new ">
+<!-- 201222 S : 작업부분 id="wrap" class="orderandpay positionTop" 넣어주세요-->
+<div id="wrap" class="content_new orderandpay positionTop">
 
 	<!-- #header -->
 	 <div id="header">
@@ -34,8 +35,8 @@
 	      <!-- 서브 -->
 	      <div class="sub_wrap">
 	       <!-- <a href="#n" _onclick="locBack();return false;" class="btn_back">뒤로가기</a> -->
-	       	<h2 id="subTitle">안심번호 서비스 안내</h2>
-	       	<a href="#n" _onclick="locBack();return false;" class="btn_back">뒤로가기</a>
+	       	<h2 class="head_title">안심번호 서비스 안내</h2>
+            <a href="javascript:;" class="btn_cls">닫기</a>
 	      </div>
 	      <!--// 서브 --> 
 	    </div>
@@ -48,9 +49,9 @@
 	</style>
 
 
-    <!-- 201222 S : 작업부분 id="content" class="orderandpay" 넣어주세요-->
+    
 	<!-- content -->
-	<div id="content" class="orderandpay">
+	<div id="content">
 
 		<div class="tooltip_wrap ">
             <div class="tooltip_inner">
@@ -60,7 +61,6 @@
                 <p class="texts">상품 배송완료 후 부여된 안심번호는 14일 이내에 자동으로 해지/소멸됩니다. 장기 미처리 건의 경우 안심번호 채번 후 90일 경과시 자동으로 해지/소멸됩니다. 본 서비스는 KT와 제휴하여 무료로 제공되며, 고객에게 부여된 안심번호는 해지/소멸 후 KT에서 다른 번호에 연결하여 재사용할 수 있습니다. (단, 일부 택배사의 경우 택배사 사정으로 인해 안심번호 서비스 지원이 불가할 수 있음)</p>
                 <p class="texts">KT 안심번호 연동 오류 등으로 인해 안심번호 체번 실패시 해당 주문 고객님께 SMS안내후 실제 휴대전화번호로 상품주문이 진행됩니다. 안심번호서비스'는 고객이 서비스 이용 동의 시에 한해 서비스 제공이 됩니다. 해외 배송 상품의 경우 안심번호 서비스 제공이 되지 않습니다. 이 점 양해바랍니다.</p>
             </div>
-            <a href="javascript:;" class="layer_close">닫기</a>
         </div>
 		
 	</div>
