--- a/MOBILE/html/new/popup_coupon_list.html
+++ b/MOBILE/html/new/popup_coupon_list.html
@@ -26,15 +26,16 @@
 </head>
 
 <body>
-<div id="wrap" class="content_new ">
+<!-- 201222 S : 작업부분 id="wrap" class="orderandpay positionTop" 넣어주세요-->
+<div id="wrap" class="content_new orderandpay positionTop">
 
 	<!-- #header -->
 	 <div id="header">
 	    <div class="inner"> <a href="#n" class="btn_home" _onclick="location.href='http://devm.hottracks.co.kr/';return false;">홈버튼</a>       
 	      <!-- 서브 -->
 	      <div class="sub_wrap">
-	       <a href="#n" _onclick="locBack();return false;" class="btn_back">뒤로가기</a>
-	       <h2 id="subTitle">사용 가능 쿠폰 선택 </h2>
+	       	<h2 class="head_title">안심번호 서비스 안내</h2>
+            <a href="javascript:;" class="btn_cls">닫기</a>
 	      </div>
 	      <!--// 서브 --> 
 	    </div>
