--- a/MOBILE/html/new/orderSheet_member.html
+++ b/MOBILE/html/new/orderSheet_member.html
@@ -319,8 +319,8 @@
                                 <th>주소 <span class="star">*</span></th>
                                 <td> 
                                    <div class="have_inner_txt address">
-                                        <div class="input_wrap">
-                                           <input type="text" placeholder="" class="width_address">                                                 
+                                        <div class="input_wrap only_english">
+                                           <input type="text" placeholder="" class="width_address ">                                                 
                                         </div>
                                         <button class="btn_defalut">우편번호검색</button>            
                                     </div> 
@@ -478,13 +478,15 @@
                             <li class="choice_wrap_inner">
                                 <a href="javascript:;" class="link lp">
                                     <input type="radio" name="orderPoint" id="orderPoint2" />
-                                    <label for="orderPoint2">엘포인트</label>
+                                    <label for="orderPoint2"><img src="../../images/new/icon_order_lp.png" alt="엘포인트"></label>
+                                    <span>엘포인트</span>
                                 </a>
                             </li>
                             <li class="choice_wrap_inner">
                                 <a href="javascript:;" class="link ok">
                                     <input type="radio" name="orderPoint" id="orderPoint3" />
-                                    <label for="orderPoint3">오케이캐쉬백</label>
+                                    <label for="orderPoint3"><img src="../../images/new/icon_order_ok.png" alt="오케이캐쉬백"></label>
+                                    <span>오케이캐쉬백</span>
                                 </a>
                             </li>
                         </ul>
